--- a/tasks/templates/tasks_page.html
+++ b/tasks/templates/tasks_page.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tasks - Ticksy ToDo</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <link rel="stylesheet" href="{% static 'style.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Task card styling with background colors */
@@ -154,7 +154,7 @@
     <header>
          <nav class="top-nav">
     <a href="{% url 'home' %}" class="header-logo">
-            <img src="{% static 'images/tricksy-logo-sm.png' %}" alt="Ticksy logo" />
+            <img src="{% static 'images/tricksy-logo-sm.png' %}" alt="Ticksy logo">
             <div class="logo-text lobster-regular">Ticksy</div>
     </a>
     {% if user.is_authenticated %}
@@ -162,10 +162,10 @@
             <i class="fas fa-user" style="color: #f46b45; margin-right: 8px;"></i> {{ user.username }}
         </div>
     {% endif %}
-    <input id="menu-toggle" type="checkbox" />
-    <label class='menu-button-container' for="menu-toggle">
-    <div class='menu-button'></div>
-  </label>
+    <input id="menu-toggle" type="checkbox">
+<label class="menu-button-container" for="menu-toggle">
+  <span class="menu-button"></span>
+</label>
     <ul class="menu">
         <li><a href="{% url 'home' %}">Home</a></li>
         {% if user.is_authenticated %}
