--- a/tasks/templates/tasks.html
+++ b/tasks/templates/tasks.html
@@ -53,7 +53,7 @@
                     <img src="{% static 'images/heroimage.webp' %}" alt="This is an image of a women completing a task" class="hero-img">
                     <div class="hero-text">
                         <h1 class="lobster-regular">Welcome To Ticksy</h1>
-                        <h2>Organizing your work life balance</h2>
+                        <h2 class="lobster-regular">Organizing your work life balance</h2>
                         <p>Manage your day to day tasks with our superb new software, Ticksy todo</p>
                     </div>
                 </div>
@@ -98,7 +98,7 @@
 <section class="section-access">
     <div class="standard-section access-flex">
         <div class="access-text">
-            <h2>Access Your Tasks Anywhere</h2>
+            <h2 class="lobster-regular">Access Your Tasks Anywhere</h2>
             <p>Ticksy is available on all your devices. Stay productive at home, work, or on the go.</p>
             <a href="{% url 'tasks' %}" class="btn-hero-primary">View Tasks</a>
            
