--- a/tasks/templates/task_confirm_delete.html
+++ b/tasks/templates/task_confirm_delete.html
@@ -5,19 +5,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Delete Task - Ticksy ToDo</title>
-    <link rel="stylesheet" href="{% static 'style.css' %}?v=7.0" />
+    <link rel="stylesheet" href="{% static 'style.css' %}?v=7.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-</head>
+<style>
+    body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  margin: 0;
+}
+main {
+  flex: 1;
+}
+</style>
+  </head>
 <body>
     <header>
         <nav class="top-nav">
             <a href="{% url 'home' %}" class="header-logo">
-                <img src="{% static 'images/tricksy-logo-sm.png' %}" alt="Ticksy logo" />
+                <img src="{% static 'images/tricksy-logo-sm.png' %}" alt="Ticksy logo">
                 <div class="logo-text lobster-regular">Ticksy</div>
             </a>
             <input id="menu-toggle" type="checkbox" />
             <label class='menu-button-container' for="menu-toggle">
-                <div class='menu-button'></div>
+                <span class='menu-button'></span>
             </label>
             <ul class="menu">
                 <li><a href="{% url 'home' %}">Home</a></li>
@@ -77,14 +88,3 @@
 </footer>
 </body>
 </html>
-<style>
-    body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  margin: 0;
-}
-main {
-  flex: 1;
-}
-</style>
