--- a/tasks/templates/task_confirm_delete.html
+++ b/tasks/templates/task_confirm_delete.html
@@ -26,7 +26,7 @@ main {
                 <img src="{% static 'images/tricksy-logo-sm.png' %}" alt="Ticksy logo">
                 <div class="logo-text lobster-regular">Ticksy</div>
             </a>
-            <input id="menu-toggle" type="checkbox" />
+            <input id="menu-toggle" type="checkbox">
             <label class='menu-button-container' for="menu-toggle">
                 <span class='menu-button'></span>
             </label>
