--- a/static/style.css
+++ b/static/style.css
@@ -34,7 +34,7 @@ header {
 .hero-section {display: flex;}
 .hero-img {width:40%}
 .hero-text {padding: 0 30px;}
-.hero-text h1 {font-size:30px; margin: 0;}
+/* .hero-text h1 {font-size:30px; margin: 0;} */
 .hero-text h2 {font-size:20px;}
 .standard-section { 
     width:100%;
